--- a/Emacs.org
+++ b/Emacs.org
@@ -1,5 +1,15 @@
 #+title Emacs from scratch configuration
-#+PROPERTY: header-args:emacs-lisp :tangle ./init.el
+#+PROPERTY: header-args:emacs-lisp :tangle ./init.el 
+* Environment Stuff (SO configuration)
+** Swap CapsLock for Ctrl
+#+begin_src shell
+cp ./xmodmap ~/.Xmodmap
+#+end_src
+
+** Link the init.el to the default .emacs.d directory
+#+begin_src shell
+ln -s ~/Documents/emacs-config/init.el ~/.emacs.d/
+#+end_src
 
 * Package management:
 #+begin_src emacs-lisp
@@ -42,10 +52,12 @@
 
 ** Fonts:
 #+begin_src shell
-sudo pacman -S ttf-inconsolata ttf-roboto
+  sudo pacman -S ttf-inconsolata ttf-roboto
 #+end_src
+
 #+begin_src emacs-lisp
 
+(set-face-attribute 'default nil :height 100)
 (set-face-attribute 'default nil :font "Inconsolata" :height 120)
 (set-face-attribute 'fixed-pitch nil :font "Inconsolata" :height 150)
 (set-face-attribute 'variable-pitch nil :font "Roboto" :height 175 :weight 'regular)
@@ -234,12 +246,14 @@ sudo pacman -S ttf-inconsolata ttf-roboto
 (add-to-list 'org-structure-template-alist '("py" . "src python"))
 (add-to-list 'org-structure-template-alist '("ht" . "src html"))
 (add-to-list 'org-structure-template-alist '("vh" . "src vhdl"))
+(add-to-list 'org-structure-template-alist '("ch" . "src c++"))
 
 ;; snippet to add python to the org-block executables:
 (org-babel-do-load-languages
  'org-babel-load-languages
  '((emacs-lisp . t)
    (python . t)
+   (C . t)
    (shell . t)))
 
 ;;caution!! this snippet will stop asking for confirmation when running a block of code in org mode!
@@ -261,7 +275,7 @@ sudo pacman -S ttf-inconsolata ttf-roboto
 ;; Automatically tangle our Emacs.org config file when we save it
 (defun efs/org-babel-tangle-config ()
   (when (string-equal (buffer-file-name)
-                      (expand-file-name "/home/david/.emacs.d/Emacs.org"))
+                      (expand-file-name "~/Documents/emacs-config/Emacs.org"))
     ;; Dynamic scoping to the rescue
     (let ((org-confirm-babel-evaluate nil))
       (org-babel-tangle))))
@@ -271,7 +285,3 @@ sudo pacman -S ttf-inconsolata ttf-roboto
 
 #+end_src
 
-* Swap CapsLock for Ctrl
-#+begin_src shell
-xmodmap ./xmodmap
-#+end_src
